--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="estilo2/style.css">
 </head>
 <body>
+        <div>
             <!--CABEÇALHO-->
             <header>
                 <h1 id="h1principal">Curiosidades de Tecnologia</h1>
@@ -89,5 +90,6 @@
                 <p  style="font-size: 1.2em; text-align: center;;height: 100px;">Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema Android e seu simpático mascote.</p>
             </article>
         <footer>Site criado por <a href="https://www.instagram.com/joao65br/" target="_blank" rel="external" class="linksroda">/joao65br</a> para Mim.</footer>
+        </div>
 </body>
 </html>
