--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <nav>
                 <a href="#" class="menu">HOME</a>
                 <a href="#" class="menu">NOTÍCIAS</a>
-                <a href="#" class="menu">FALE CONOSCO</a>
+                <a href="#" class="menu">SOBRE</a>
             </nav> 
             <!--ARTICLE-->
 
